# docs/swagger.yaml
@@ -16,7 +16,7 @@ definitions:
     - language
     - last_name
     type: object
-  internal_customer.CreateCustomerResponse:
+  internal_customer.ResponseCustomer:
     properties:
       email:
         type: string
@@ -28,8 +28,6 @@ definitions:
         type: string
       last_name:
         type: string
-      status:
-        type: string
     type: object
 host: localhost:8080
 info:
@@ -39,6 +37,40 @@ info:
   version: "1.0"
 paths:
   /customers:
+    get:
+      consumes:
+      - application/json
+      description: Obtiene un cliente por ID o lista todos los clientes.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/internal_customer.ResponseCustomer'
+            type: array
+        "400":
+          description: JSON inválido o malformado
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: El email ya está registrado
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Error interno del servidor
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Obtener clientes
+      tags:
+      - Customers
     post:
       consumes:
       - application/json
@@ -56,7 +88,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/internal_customer.CreateCustomerResponse'
+            $ref: '#/definitions/internal_customer.ResponseCustomer'
         "400":
           description: JSON inválido o malformado
           schema:
